fix hidden checkout btn on mobile cart

--- a/client/templates/cart/cart.less
+++ b/client/templates/cart/cart.less
@@ -60,7 +60,7 @@
 	#items {
 		display: inline-block;
 		background: white;
-		height: 58vh;
+		height: 42vh;
 		overflow-y: auto;
 		.item {
 			padding: 15px 0;
